@@ -1,3 +1,5 @@
+2009-Oct28	cpo	Tag V01-05-01.  Put back support for x86_64 in packages.mk.
+                                        Put in pragma pack(4) in bldData.hh.
 2009-Oct27	cpo	Tag V01-05-00.  Tomy added phase cavity support.
 2009-Oct08	weaver	Tag V01-04-00.  Added EvrConfig_V2 for opcode support.
 2009-Sep21      tomytsai    Add xtc support for EBeam bld
